# opencv-glad-glfw3-startup

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_gl_cv.cpp
src/: CMakeLists.txt  adder.cpp  adder.h  cv_wrapper.cpp  cv_wrapper.h  linmath.h
src/glad/: glad.c  glad.h
src/imgui/: CMakeLists.txt
